fixed social links alignment in center

--- a/_sass/devlopr.scss
+++ b/_sass/devlopr.scss
@@ -689,6 +689,7 @@ header {
         padding: 5px;
         margin: 2px;
         text-decoration: none !important;
+        text-align: center;
     }
     #header-nav{
         float: right;
@@ -1288,7 +1289,7 @@ footer {
     display: none !important;
 }
 
-#social
+.social
 {
     margin: 0px !important;
     padding: 0px !important;
